--- a/style.css
+++ b/style.css
@@ -797,6 +797,93 @@ footer p{
     font-size: 12px;
 }
 
+}
+
+
+
+
+
+
+
+@media (max-width: 610px){ 
+
+    .showcase{
+        
+        padding: 40px;
+        padding-right: 0;
+    }
+
+
+    .showcase .showcase-information h1{
+        font-size: 20px;
+    }
+    .showcase .showcase-information p{
+        margin-top: 40px;
+        font-size: 8px;
+    }
+    
+    .showcase .showcase-information button{
+        margin-top: 20px;
+        font-size: 8px;
+    }
+
+
+     
+    /* .image-container img{
+        width: 560px;
+        height: 460px;
+    } */
+ 
+    /* amout section */
+    .about-container .about1 div h3{
+        font-size: 10px;
+        
+      }
+    .about-container .about1 div p{
+       font-size: 8px;
+     }
+ .about-container .about1 img{
+     width: 280px;
+     height: 160px;
+     margin-right: 40px;
+ }
+ 
+ .about-container .about2 img{
+    width: 280px;
+    height: 160px;
+    
+ }
+ 
+ .about-container .about2 {
+    padding-left: 40px;
+ }
+ .newsletter input{
+     width: 160px;
+    
+ }
+
+ .about-container .about2 h1{
+ 
+    font-size: 24px;
+    
+}
+
+.lines{
+    display: none;
+}
+
+
+
+footer h1{
+   
+    font-size: 10px;
+    
+}
+
+footer p{
+    font-size: 12px;
+}
+
 
 
 }
@@ -872,7 +959,163 @@ footer p{
  }
  
  .newsletter input{
-     width: 100px;
+     width: 100%;
+    
+ }
+
+ .about-container .about2 h1{
+    width: 100%;
+    font-size: 24px;
+    margin-bottom: 20px;
+    
+}
+
+
+.product-card {
+    flex: 0 0 auto;
+    width: 328px;
+    height: 410px;
+    margin-right: 40px;
+}
+  
+.product-image {
+    position: relative;
+    width: 100%;
+    height: 310px;
+    overflow: hidden;
+}
+  
+.product-thumb {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+  
+.discount-tag {
+    font-family: 'Open Sans', sans-serif;
+    position: absolute;
+    background: #fff;
+    padding: 6px 10px;
+    left: 8px;
+    top: 8px;
+    color: #000;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 167.5%;
+}
+  
+.product-info {
+    width: 100%;
+    height: 100px;
+    padding-top: 8px;
+}
+
+footer section h1{
+    margin-bottom: 6px;
+}
+
+.footer-container{
+    flex-direction: column;
+}
+.faster{
+    margin-top: 30px;
+}
+.help{
+    margin-top: 30px;
+}
+
+
+footer h1{
+   
+    font-size: 10px;
+    
+}
+
+footer p{
+    font-size: 12px;
+}
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 500px){ 
+
+    .showcase{
+        
+        display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       padding: 20px;
+       text-align: left;
+    }
+
+
+    .showcase .showcase-information h1{
+        font-size: 20px;
+    }
+    .showcase .showcase-information p{
+        margin-top: 20px;
+        font-size: 10px;
+    }
+    
+    .showcase .showcase-information button{
+        margin-top: 20px;
+        font-size:10px;
+    }
+
+
+     
+    .image-container img{
+        width: 410px;
+        height: 300px;
+    }
+ 
+    /* amout section */
+    .about-container{
+        padding: 20px;
+    }
+    .about-container .about1{
+        flex-direction: column;
+        padding: 20px;
+    }
+    .about-container .about1 div h3{
+        font-size: 10px;
+      }
+    .about-container .about1 div p{
+       font-size: 8px;
+       margin-top: 10px;
+     }
+ .about-container .about1 img{
+     width: 320px;
+     height: 200px;
+     margin-right: 0px;
+     margin-bottom: 20px;
+ }
+ .about-container .about2{
+    flex-direction: column;
+    padding: 20px;
+ }
+ .about-container .about2 img{
+    width: 320px;
+    height: 200px;
+ }
+
+ footer{
+    padding: 20px;
+ }
+ 
+ .newsletter input{
+     width: 100%;
     
  }
 
@@ -953,4 +1196,3 @@ footer p{
 
 
 }
-
