--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@
     display: flex;
     /* flex-direction: column; */
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #000;
     padding: 80px 40px 80px 80px;
 }
@@ -519,6 +519,11 @@ footer{
 @media (max-width: 1000px){ 
 
 
+    .lines{
+        display: none;
+    }
+   
+
     
     .showcase .showcase-information p{
         font-size: 12px;
@@ -640,6 +645,9 @@ footer{
     .icons img:nth-child(2){
         display: none;
     }
+    .lines{
+        display: none;
+    }
 }
 
 
@@ -743,6 +751,10 @@ footer{
     .showcase .showcase-information button{
         margin-top: 20px;
         font-size: 8px;
+    }
+
+    .lines{
+        display: none;
     }
 
 
@@ -901,6 +913,7 @@ footer p{
        justify-content: center;
        padding: 20px;
        text-align: left;
+       padding-top: 40px;
     }
 
 
@@ -940,8 +953,8 @@ footer p{
        margin-top: 10px;
      }
  .about-container .about1 img{
-     width: 320px;
-     height: 200px;
+    width: 410px;
+    height: 240px;
      margin-right: 0px;
      margin-bottom: 20px;
  }
@@ -950,8 +963,8 @@ footer p{
     padding: 20px;
  }
  .about-container .about2 img{
-    width: 320px;
-    height: 200px;
+    width: 410px;
+    height: 240px;
  }
 
  footer{
@@ -1056,6 +1069,7 @@ footer p{
        align-items: center;
        justify-content: center;
        padding: 20px;
+       padding-top: 40px;
        text-align: left;
     }
 
@@ -1076,8 +1090,8 @@ footer p{
 
      
     .image-container img{
-        width: 410px;
-        height: 300px;
+        width: 480px;
+        height: 340px;
     }
  
     /* amout section */
@@ -1096,8 +1110,8 @@ footer p{
        margin-top: 10px;
      }
  .about-container .about1 img{
-     width: 320px;
-     height: 200px;
+    width: 410px;
+    height: 240px;
      margin-right: 0px;
      margin-bottom: 20px;
  }
@@ -1106,8 +1120,8 @@ footer p{
     padding: 20px;
  }
  .about-container .about2 img{
-    width: 320px;
-    height: 200px;
+    width: 410px;
+    height: 240px;
  }
 
  footer{
